--- a/CSS-GRID:FLEX/style.css
+++ b/CSS-GRID:FLEX/style.css
@@ -14,4 +14,9 @@
   }
   .flex-item {
     background-color: #ff0044;
+    flex-basis: 250px;
+    /* flex-grow: ;
+    flex-shrink: ;
+    flex: ;
+     */
   }
